--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Gallery</title>
   </head>
   <body>
+    <div class="dropbox" id="dropbox"></div>
     <form
       id="jsonFile"
       name="jsonFile"
