--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Gallery</title>
   </head>
   <body>
-    <div class="dropbox" id="dropbox"></div>
+    <div class="dropbox" id="dropbox">DROPZONE</div>
     <form
       id="jsonFile"
       name="jsonFile"
