--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <input type="button" value="Load from url" onclick="loadUrl();" />
         <br>
         <input type="file" id="fileinput" />
-        <input type="button" value="Load from file" onclick="loadFile();" />
+        <input type="button" value="Load from JSON file" onclick="loadFile();" />
       </fieldset>
     </form>
 
