--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         name="jsonFile"
         enctype="multipart/form-data"
         method="post"
+        class="json-form"
       >
-        <fieldset>
-          <div>
+        <fieldset class="load-fields">
+          <div class="load-fields__url-based">
             <input
               type="text"
               id="urlinput"
@@ -25,7 +26,7 @@
             />
             <input type="button" value="Load from url" onclick="loadUrl();" />
           </div>
-          <div>
+          <div class="load-fields__json-based">
             <input type="file" id="fileinput" />
             <input
               type="button"
@@ -53,6 +54,6 @@
     </header>
 
     <!-- gallery tiles -->
-    <ul></ul>
+    <ul class="gallery-tiles"></ul>
   </body>
 </html>
