--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
             <div class="load-fields__json-based">
               <input type="file" id="fileinput" name="fileinput" />
-              <label for="fileinput" class="load-fields__field" id="dropbox">choose json file locally or drag and drop image files here</label>
+              <label for="fileinput" class="load-fields__field" id="dropbox">select file or drag'n'drop here</label>
               <input
                 type="button"
                 value="add"
