--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 id="urlinput"
                 name="urlinput"
                 class="load-fields__field"
+                required
               />
               <label id="userLabel" for="urlinput">URL to image</label>
               <input
